# boxed

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  clippy.toml  tmp_setup.sh
.github/workflows/: ci.yml  release.yml  tag-release.yml
src/: capabilities.rs  cgroups.rs  main.rs  namespace.rs  process.rs  rootfs.rs  rootless.rs  seccomp.rs
tests/: cli.rs
tests/fixtures/: seccomp-profile-valid.json  seccomp-profile.json
