[package]
name = "boxed"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A container runtime built from scratch in Rust"
repository = "https://github.com/subhadeep-123/boxed"

[[bin]]
name = "boxed"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
caps = "0.5.6"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
libc = "0.2.184"
log = "0.4.29"
nix = { version = "0.31.2", features = ["process", "sched", "mount", "hostname", "signal", "fs", "user"] }
serde = {version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"